--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             </article>
             <article>
                 <h2>Curso de JavaScript</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit similique quis aliquam velit officiis, enim blanditiis quod dolor, consectetur sint impedit voluptate accusamus placeat porro dicta deserunt alias atque ratione.</p>
+               '<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, unde commodi repellendus doloremque aliquid, velit esse quaerat, error maiores quibusdam expedita veniam atque blanditiis nemo accusamus ipsam ab. Nihil, nam!</p>
+               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ducimus esse velit repellendus, enim beatae cumque aut unde, quo deleniti in molestias ratione id sed culpa quia dignissimos accusantium! Labore.</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti nam, voluptates dolores in dicta minima. Rem recusandae totam fugit nostrum obcaecati incidunt in atque illum necessitatibus earum, libero voluptates.</p>
             </article>
         </header>
     </main>
