--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
         <header>
             <h1>Curso grátis</h1>
             <article>
-                <h2>Curso de HTML5 com CSS3</h2>
+                <h2>Curso de HTML5 com CSS3</h2
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, fugiat consequuntur, debitis, voluptates inventore omnis laborum dicta animi esse saepe enim qui molestiae officiis voluptate autem minima? Alias, sequi minus.</p>
             </article>
             <article>
                 <h2>Curso de JavaScript</h2>
                '<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, unde commodi repellendus doloremque aliquid, velit esse quaerat, error maiores quibusdam expedita veniam atque blanditiis nemo accusamus ipsam ab. Nihil, nam!</p>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius, ducimus esse velit repellendus, enim beatae cumque aut unde, quo deleniti in molestias ratione id sed culpa quia dignissimos accusantium! Labore.</p>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti nam, voluptates dolores in dicta minima. Rem recusandae totam fugit nostrum obcaecati incidunt in atque illum necessitatibus earum, libero voluptates.</p>
-            </article>
-        </header>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti nam, voluptates dolores in dicta minima. Rem recusandae totam fugit nostrum obcaecati incidunt in atque illum necessitatibus earum, libero voluptates.</p
     </main>
     
 </body>
